Safari fix for backface-visibility

--- a/style.css
+++ b/style.css
@@ -47,12 +47,14 @@ canvas {
 
 .miniBack {
   transform: rotateY(180deg);
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
 .container {
   display: flex;
   justify-content: right;
+  -webkit-perspective: 1000px;
   perspective: 1000px;
   opacity: 0.9;
 }
@@ -88,6 +90,7 @@ canvas {
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   text-align: center;
 
